--- a/poke_style.css
+++ b/poke_style.css
@@ -10,8 +10,7 @@
 .bar_filled_highlight{
 	height: 100%;
 	border-radius: 5px;
-	background-color: red;
-
+	background-color: DarkSlateGray;
 }
 
 .bar_title{
