--- a/poke_style.css
+++ b/poke_style.css
@@ -1,19 +1,52 @@
-.bar_default {
-	height: 35px;
-	width: 700px;
-	background-color: gray;
-	border-radius: 5px;
-	margin-bottom: 20px;
+html, body{
+	height: 100%;
+	width: 100%;
+	margin: 1px;
+}
+
+
+#page_title{
+	/*margin: 50px auto;*/
+}
+
+h1{
+	font: #444;
+	font-family: 'Helvetica Neue', Arial, Sans-serif;
+	font-size: 52px;
 
 }
 
-.bar_filled_highlight{
+.container{
+	width: 100%;
+	height: 75%;
+	margin-top: 50px;
+	border: 4px solid #eee;
+	border-left: none;
+	border-right: none;
+}
+
+
+.bar_default {
+	float: left;
 	height: 100%;
+	width: 5.88%;
+/*	background-color: white;*/
+	box-shadow: 1px 0 0 #eee;
+}
+
+
+.bar_filled_highlight{
+	height: 	
 	border-radius: 5px;
-	background-color: DarkSlateGray;
+	background-color: red;
+
 }
 
 .bar_title{
 	line-height: 1em;
 	padding: 6px 20px;
+}
+
+.clear{
+	clear: both;
 }
