--- a/poke_style.css
+++ b/poke_style.css
@@ -32,13 +32,14 @@ h1{
 	width: 5.88%;
 /*	background-color: white;*/
 	box-shadow: 1px 0 0 #eee;
+	position: relative;
 }
 
 
 .bar_filled_highlight{
-	height: 	
-	border-radius: 5px;
 	background-color: red;
+	position: absolute;
+	bottom: 0px;
 
 }
 
@@ -50,5 +51,3 @@ h1{
 .clear{
 	clear: both;
 }
-
-/*test*/
