--- a/poke_style.css
+++ b/poke_style.css
@@ -2,6 +2,7 @@ html, body{
 	height: 100%;
 	width: 100%;
 	margin: 1px;
+	font-family: 'Helvetica Neue', Arial, Sans-serif;
 }
 
 
@@ -11,7 +12,6 @@ html, body{
 
 h1{
 	font: #444;
-	font-family: 'Helvetica Neue', Arial, Sans-serif;
 	font-size: 52px;
 
 }
@@ -35,18 +35,59 @@ h1{
 	position: relative;
 }
 
+/*when hovering over bar_default (any part of the bar), affect bar_filled_highlight elemnt*/
+/*added !important to height because height was defined inline.
+inline takes higher precidents than css styling, in order to overried, you have to use "!important"*/
+.bar_default:hover .bar_filled_highlight{
+	height: 100% !important;
+
+}
+
+.bar_default:hover .bar_title{
+	color: white;
+}
+
+
+.bar_default:hover .bar_number{
+	opacity: 1;
+}
 
 .bar_filled_highlight{
 	background-color: red;
 	position: absolute;
 	bottom: 0px;
-
+	width: 100%;
+	transition: height .3s ease;
 }
 
 .bar_title{
-	line-height: 1em;
-	padding: 6px 20px;
+	word-wrap: break-word; 
+	width: 16px;
+	position: absolute;
+	left: 50%;
+	margin-left: -8px;
+	top: 20%;
+	color: #aaa;
+	font-weight: bold;
+	font-size: 21px;
+	text-align: center;
+	z-index: 3;
+	transition: color .5s ease;
 }
+
+.bar_number{
+	color: white;
+	text-align: center;
+	position: absolute;
+	top: 10%;
+	opacity: 0;
+	z-index: 3;
+	transition: opacity .5s ease;
+	background-color: black;
+	width: 100%;
+	font-size: 18px;
+}
+
 
 .clear{
 	clear: both;
